feat: update getting api
