# internal/app/dto/grpc_bindings.go
@@ -463,10 +463,6 @@ func ListSelectionResponseToPB(in *ListSelectionResponse) *pb.ListSelectionRespo
 	}
 }
 
-func ListPickedStocksRequestFromPB(in *pb.ListPickedStocksRequest) *ListPickedStocksRequest {
-	return &ListPickedStocksRequest{}
-}
-
 func ListPickedStocksResponseToPB(in *ListPickedStocksResponse) *pb.ListPickedStocksResponse {
 	if in == nil {
 		return nil
@@ -534,5 +530,31 @@ func SelectionToPB(in *entity.Selection) *pb.Selection {
 		Trust10:          pbTrust10,
 		Foreign10:        pbForeign10,
 		QuoteChange:      pbQuoteChange,
+	}
+}
+
+func InsertPickedStocksRequestFromPB(in *pb.InsertPickedStocksRequest) *InsertPickedStocksRequest {
+	stockIDs := in.StockIDs
+
+	return &InsertPickedStocksRequest{
+		StockIDs: stockIDs,
+	}
+}
+
+func InsertPickedStocksResponseToPB(in *InsertPickedStocksResponse) *pb.InsertPickedStocksResponse {
+	if in == nil {
+		return nil
+	}
+
+	pbSuccess := in.Success
+	pbStatus := int32(in.Status)
+	pbErrorCode := in.ErrorCode
+	pbErrorMessage := in.ErrorMessage
+
+	return &pb.InsertPickedStocksResponse{
+		Success:      pbSuccess,
+		Status:       pbStatus,
+		ErrorCode:    pbErrorCode,
+		ErrorMessage: pbErrorMessage,
 	}
 }
